crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@try_catch_finally_break_continue.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/try_catch_finally_break_continue.pcode
---
Ok:
  actions:
    - ConstantPool:
        - i
        - loop i=
        - "  try:i="
        - boom@2
        - boom@4
        - "  catch:"
        - e
        - "  finally:i="
        - "  after try/catch/finally i="
        - done
    - Push:
        - Constant: 0
    - Push:
        - Integer: 0
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 6
    - Less2
    - Not
    - If: loc019d
    - Push:
        - Constant: 1
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
    - Try:
        try_body:
          actions:
            - Push:
                - Constant: 2
            - Push:
                - Constant: 0
            - GetVariable
            - Add2
            - Trace
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 1
            - Equals2
            - Not
            - If: loc00c7
            - Jump: loc018b
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 2
            - Equals2
            - Not
            - If: loc00e2
            - Push:
                - Constant: 3
            - Throw
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 4
            - Equals2
            - Not
            - If: loc00fd
            - Push:
                - Constant: 4
            - Throw
            - Jump: loc013d
          label_positions:
            loc00c7: 12
            loc00e2: 20
            loc00fd: 28
        catch_body:
          - Variable: e
          - actions:
              - Push:
                  - Constant: 5
              - Push:
                  - Constant: 6
              - GetVariable
              - Add2
              - Trace
              - Push:
                  - Constant: 6
              - GetVariable
              - Push:
                  - Constant: 3
              - Equals2
              - Not
              - If: loc0126
              - Jump: loc019d
              - Push:
                  - Constant: 6
              - GetVariable
              - Push:
                  - Constant: 4
              - Equals2
              - Not
              - If: loc013d
              - Jump: loc018b
            label_positions:
              loc0126: 12
        finally_body:
          actions:
            - Push:
                - Constant: 7
            - Push:
                - Constant: 0
            - GetVariable
            - Add2
            - Trace
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 3
            - Equals2
            - Not
            - If: loc0164
            - Jump: loc018b
            - Push:
                - Constant: 0
            - GetVariable
            - Push:
                - Integer: 5
            - Equals2
            - Not
            - If: loc017e
            - Jump: loc019d
          label_positions:
            loc013d: 0
            loc0164: 12
    - Push:
        - Constant: 8
    - Push:
        - Constant: 0
    - GetVariable
    - Add2
    - Trace
    - Push:
        - Constant: 0
    - Push:
        - Constant: 0
    - GetVariable
    - Increment
    - SetVariable
    - Jump: loc0072
    - Push:
        - Constant: 9
    - Trace
  label_positions:
    loc0072: 4
    loc017e: 16
    loc018b: 21
    loc019d: 27
