crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__all_samples@typeof.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: parsed
input_file: samples/as2_pcode/typeof.pcode
---
Ok:
  actions:
    - ConstantPool:
        - num
        - obj
        - trace
        - "typeof num: "
        - "typeof obj: "
        - "typeof obj.num: "
        - "typeof obj.num + 1: "
        - "typeof obj.num == \\\"number\\\" ? \\\":)\\\" : \\\":(\\\": "
        - number
        - ":("
        - ":)"
        - "typeof obj.num + typeof obj.num: "
        - "typeof obj.trace: "
        - "typeof obj.trace(): "
        - "typeof(nonexistent, obj): "
        - nonexistent
    - Push:
        - Constant: 0
    - Push:
        - Integer: 1
    - DefineLocal
    - Push:
        - Constant: 1
    - Push:
        - Constant: 0
    - Push:
        - Integer: 1
    - Push:
        - Constant: 2
    - Push:
        - Constant: 2
    - GetVariable
    - Push:
        - Integer: 2
    - InitObject
    - DefineLocal
    - Push:
        - Constant: 3
    - Push:
        - Constant: 0
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 4
    - Push:
        - Constant: 1
    - GetVariable
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 5
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 6
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Integer: 1
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 7
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Constant: 8
    - Equals2
    - If: loc01a5
    - Push:
        - Constant: 9
    - Jump: loc01aa
    - Push:
        - Constant: 10
    - Add2
    - Trace
    - Push:
        - Constant: 11
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 0
    - GetMember
    - TypeOf
    - Add2
    - Add2
    - Trace
    - Push:
        - Constant: 12
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - GetMember
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 13
    - Push:
        - Integer: 0
    - Push:
        - Constant: 1
    - GetVariable
    - Push:
        - Constant: 2
    - CallMethod
    - TypeOf
    - Add2
    - Trace
    - Push:
        - Constant: 14
    - Push:
        - Constant: 15
    - GetVariable
    - Pop
    - Push:
        - Constant: 1
    - GetVariable
    - TypeOf
    - Add2
    - Trace
  label_positions:
    loc01a5: 54
    loc01aa: 55
