crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@assign_variable_many_ways.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/assign_variable_many_ways.pcode
---
ConstantPool "message", "Hello ", "World", "!", "a", "b", "c", "a: ", "b: ", "c: "
Push constant0
Push constant1
DefineLocal
Push constant0
Push constant0
GetVariable
Push constant2
Add2
SetVariable
Push constant0
Push constant0
GetVariable
Push constant3
Add2
SetVariable
Push constant0
GetVariable
Trace
Push constant4
Push 1
DefineLocal
Push constant5
DefineLocal2
Push constant6
Push 3
DefineLocal
Push constant7
Push constant4
GetVariable
Add2
Trace
Push constant8
Push constant5
GetVariable
Add2
Trace
Push constant9
Push constant6
GetVariable
Add2
Trace
