crates/rascal/src/internal/as2_pcode/parser/snapshots/rascal__internal__as2_pcode__parser__tests__printed@delete.pcode.snap
---
source: crates/rascal/src/internal/as2_pcode/parser/tests.rs
expression: "parsed.unwrap_or_else(|_| Actions::empty())"
input_file: samples/as2_pcode/delete.pcode
---
ConstantPool "num", "obj", "delete num: ", "delete obj: ", "delete obj.num: ", "delete obj.num + 1: ", "delete obj.num == \"number\" ? \":)\" : \":(\": ", ":(", ":)", "delete obj.num + delete obj.num: ", "trace", "delete obj.trace: ", "delete obj.trace(): ", "delete(nonexistent, obj): ", "nonexistent"
Push constant0
Push 1
DefineLocal
Push constant1
Push constant0
Push 1
Push 1
InitObject
DefineLocal
Push constant2
Push constant0
Delete2
Add2
Trace
Push constant3
Push constant1
Delete2
Add2
Trace
Push constant1
Push constant0
Push 1
Push 1
InitObject
DefineLocal
Push constant4
Push constant1
GetVariable
Push constant0
Delete
Add2
Trace
Push constant1
Push constant0
Push 1
Push 1
InitObject
DefineLocal
Push constant5
Push constant1
GetVariable
Push constant0
Delete
Push 1
Add2
Add2
Trace
Push constant1
Push constant0
Push 1
Push 1
InitObject
DefineLocal
Push constant6
Push constant1
GetVariable
Push constant0
Delete
If loc01dc
Push constant7
Jump loc01e1
loc01dc:Push constant8
loc01e1:Add2
Trace
Push constant1
Push constant0
Push 1
Push 1
InitObject
DefineLocal
Push constant9
Push constant1
GetVariable
Push constant0
Delete
Push constant1
GetVariable
Push constant0
Delete
Add2
Add2
Trace
Push constant1
Push constant0
Push 1
Push constant10
Push constant10
GetVariable
Push 2
InitObject
DefineLocal
Push constant11
Push constant1
GetVariable
Push constant10
Delete
Add2
Trace
Push constant1
Push constant0
Push 1
Push constant10
Push constant10
GetVariable
Push 2
InitObject
DefineLocal
Push constant12
Push 0
Push constant1
GetVariable
Push constant10
CallMethod
Delete2
Add2
Trace
Push constant13
Push constant14
GetVariable
Pop
Push constant1
GetVariable
Delete2
Add2
Trace
